--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 
 <body>
+    <div id="category-one">1</div>
+    <div id="category-two">2</div>
+    <div id="category-three">3</div>
+    <div id="category-four">4</div>
     <div id="Question">question</div>
     <div id="Answer">answer</div>
     <button id="submit"></button>
 
 
 </body>
-<script src="./src/index.js"></script>
+<script src="./src/admin.js"></script>
 </html>
