--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="category-four">4</div>
     <div id="Question">question</div>
     <div id="Answer">answer</div>
-    <button id="submit"></button>
+    <button id="submit">submit</button>
+    <div id="stats"></div>
 
 
 </body>
