--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Quiz App</title>
 </head>
 
@@ -15,6 +16,10 @@
     <div id="Answer">answer</div>
     <button id="submit">submit</button>
     <div id="stats"></div>
+
+    <div id="progress-container">
+        <div id="progress-bar"></div>
+      </div>
 
 
 </body>
