--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <input type="text" name="name" id="player-name">
     <div id="category-one">1</div>
     <div id="category-two">2</div>
     <div id="category-three">3</div>
