--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
     <input type="text" name="name" id="player-name">
-    <div id="category-one">1</div>
-    <div id="category-two">2</div>
-    <div id="category-three">3</div>
-    <div id="category-four">4</div>
+    <div id="category-one">JavaScript Fundamentals</div>
+    <div id="category-two">Backend Concepts</div>
+    <div id="category-three">Relational Databases</div>
+    <div id="category-four">Artifical Intelligence</div>
     <div id="Question">question</div>
     <div id="Answer">answer</div>
     <button id="submit">submit</button>
