--- a/index.html
+++ b/index.html
@@ -4,11 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Quiz App</title>
+    <title>Tech Quiz</title>
 </head>
 
 <body>
-    <input type="text" name="name" id="player-name">
+    <body>
+    <div class="container">
+      <form id="start-form" class="card">
+        <h1>Tech Quiz</h1>
+        <input
+          type="text"
+          id="name"
+          placeholder="Enter your name"
+          id="player-name"
+          required
+        />
+        <select id="category">
+          <option value="js">JavaScript</option>
+          <option value="html">HTML</option>
+        </select>
+        <button type="submit">Start Quiz</button>
+      </form>
+
+      <div id="quiz-container" class="card" style="display: none">
+        <div id="progress-container"><div id="progress-bar"></div></div>
+        <div id="timer">10</div>
+        <h2 id="question-text"></h2>
+        <ul id="answers-list"></ul>
+      </div>
+
+      <div id="result" class="card" style="display: none"></div>
+
+      <div id="leaderboard" class="card">
+        <h2>Leaderboard</h2>
+        <label for="leaderboard-filter">Filter by Category:</label>
+        <select id="leaderboard-filter">
+          <option value="all">All</option>
+          <option value="js">JavaScript</option>
+          <option value="html">HTML</option>
+        </select>
+        <ol id="leaderboard-list"></ol>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+
+
+
+    <!-- <input type="text" name="name" id="player-name">
     <div id="category-one">1</div>
     <div id="category-two">2</div>
     <div id="category-three">3</div>
@@ -20,9 +63,10 @@
 
     <div id="progress-container">
         <div id="progress-bar"></div>
-      </div>
+      </div> -->
 
 
 </body>
 <script src="./src/admin.js"></script>
 </html>
+
