--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 <body>
     <input type="text" name="name" id="player-name">
+    <div id="highScore"></div>
+    <ul id="scoreList"></ul>
+
     <div id="category-one">JavaScript Fundamentals</div>
     <div id="category-two">Backend Concepts</div>
     <div id="category-three">Relational Databases</div>
     <div id="category-four">Artifical Intelligence</div>
-    <div id="Question">question</div>
-    <div id="Answer">answer</div>
+    <div id="Question"></div>
+    <div id="Answer"></div>
     <button id="submit">submit</button>
     <div id="stats"></div>
 
